--- a/Silently/src/ico-img.qrc
+++ b/Silently/src/ico-img.qrc
@@ -27,5 +27,6 @@
         <file>img/magical-staff-2.jpg</file>
         <file>img/torch.jpg</file>
         <file>img/Character.jpg</file>
+        <file>img/png-transparent-arrow-computer-icons-down-arrow-angle-hand-logo.png</file>
     </qresource>
 </RCC>
