new naming for mainWindow because old incomprehensible

--- a/Silently/src/mainwindow.ui
+++ b/Silently/src/mainwindow.ui
@@ -57,7 +57,7 @@ color:black;</string>
          </widget>
         </item>
         <item row="0" column="1">
-         <widget class="QLabel" name="character_icon">
+         <widget class="QLabel" name="label_CharacterIcon">
           <property name="minimumSize">
            <size>
             <width>135</width>
@@ -88,7 +88,7 @@ color:black;</string>
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="QFrame" name="infoCharacter">
+         <widget class="QFrame" name="frame_infoCharacter">
           <property name="minimumSize">
            <size>
             <width>160</width>
@@ -176,7 +176,7 @@ border-radius:10px;</string>
            <item row="1" column="0">
             <layout class="QHBoxLayout" name="horizontalLayout">
              <item>
-              <widget class="QListWidget" name="listTag">
+              <widget class="QListWidget" name="QListWidget_tags">
                <property name="minimumSize">
                 <size>
                  <width>0</width>
@@ -198,7 +198,7 @@ border-radius:9px;</string>
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="tags_option">
+              <widget class="QPushButton" name="button_tagsOption">
                <property name="minimumSize">
                 <size>
                  <width>30</width>
@@ -227,7 +227,7 @@ border-radius:15px;</string>
               </widget>
              </item>
              <item>
-              <widget class="QLabel" name="date_create_note">
+              <widget class="QLabel" name="label_DateOfCreation">
                <property name="minimumSize">
                 <size>
                  <width>15</width>
@@ -254,7 +254,7 @@ color:white</string>
             </layout>
            </item>
            <item row="0" column="0">
-            <widget class="QLineEdit" name="TitleNote">
+            <widget class="QLineEdit" name="QLineEdit_TitleNote">
              <property name="minimumSize">
               <size>
                <width>0</width>
@@ -270,7 +270,7 @@ border-radius:10px;</string>
             </widget>
            </item>
            <item row="2" column="0">
-            <widget class="QFrame" name="frame_4">
+            <widget class="QFrame" name="frame_parentForTextNote">
              <property name="minimumSize">
               <size>
                <width>0</width>
@@ -370,7 +370,7 @@ border-radius:10px;</string>
        </property>
        <layout class="QGridLayout" name="gridLayout_8">
         <item row="0" column="0">
-         <widget class="QLabel" name="info">
+         <widget class="QLabel" name="label_InfoSpace">
           <property name="font">
            <font>
             <pointsize>13</pointsize>
@@ -388,7 +388,7 @@ border-radius:10px;</string>
          </widget>
         </item>
         <item row="1" column="0">
-         <widget class="QPushButton" name="change_space">
+         <widget class="QPushButton" name="button_change_space">
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -457,7 +457,7 @@ border-radius:15px;</string>
              <number>4</number>
             </property>
             <item>
-             <widget class="QPushButton" name="AddNoteSpace">
+             <widget class="QPushButton" name="button_AddNoteSpace">
               <property name="minimumSize">
                <size>
                 <width>60</width>
@@ -486,7 +486,7 @@ border-radius:5px;</string>
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="delete_Note_Service">
+             <widget class="QPushButton" name="button_deleteNoteService">
               <property name="minimumSize">
                <size>
                 <width>60</width>
@@ -517,7 +517,7 @@ border-radius:5px;</string>
            </layout>
           </item>
           <item row="1" column="0">
-           <widget class="QComboBox" name="NoteSpaces">
+           <widget class="QComboBox" name="QComboBox_NoteSpaces">
             <property name="maximumSize">
              <size>
               <width>25987</width>
@@ -530,7 +530,7 @@ border-radius:5px;</string>
            </widget>
           </item>
           <item row="2" column="0">
-           <widget class="QListWidget" name="listNote">
+           <widget class="QListWidget" name="QListWidget_Notes">
             <property name="minimumSize">
              <size>
               <width>0</width>
@@ -560,7 +560,7 @@ border-radius:8px;
           <item row="3" column="0">
            <layout class="QHBoxLayout" name="horizontalLayout_2">
             <item>
-             <widget class="QPushButton" name="pushButton">
+             <widget class="QPushButton" name="button_addNote">
               <property name="minimumSize">
                <size>
                 <width>0</width>
@@ -589,7 +589,7 @@ border-radius:5px;</string>
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="delete_Note">
+             <widget class="QPushButton" name="button_deleteNote">
               <property name="minimumSize">
                <size>
                 <width>0</width>
@@ -733,9 +733,9 @@ border-radius:15px;</string>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <tabstops>
-  <tabstop>change_space</tabstop>
+  <tabstop>button_change_space</tabstop>
   <tabstop>QuestList</tabstop>
-  <tabstop>TitleNote</tabstop>
+  <tabstop>QLineEdit_TitleNote</tabstop>
  </tabstops>
  <resources/>
  <connections/>
