test update functional Item Create ItemFactory, ItemGeneratorStrategy, DefaultItemGenerator

--- a/Silently/src/ico-img.qrc
+++ b/Silently/src/ico-img.qrc
@@ -27,5 +27,6 @@
         <file>img/magical-staff-2.jpg</file>
         <file>img/torch.jpg</file>
         <file>img/Character.jpg</file>
+        <file>img/multiple-error-page-pixel-art-style_475147-2818.jpg</file>
     </qresource>
 </RCC>
